# studio-pilot-vision

./: .coverage  .env.example  .gitignore  BUSINESS_CASE.md  CI_CD_FIXES.md  COVERAGE_80_PERCENT_PLAN.md  DOCUMENTATION_AUDIT.md  INTERVIEW_STORY_BANK.md  PACKAGE_MANAGER_CLEANUP.md  PRODUCTION_READINESS_SUMMARY.md  QUICK_START_DASHBOARD.md  README.md  SECURITY.md  SQLITE_ERROR_FIX.md  TEST_COVERAGE_PLAN.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts  video.md  vitest.config.ts
ai-insights/: .coverage  .env.example  .renderignore  ARCHITECTURE_HARDENING.md  BUILD_OPTIMIZATION.md  CLEANUP_SUMMARY.md  COGNEE_INTEGRATION.md  COGNEE_OPTIMIZATIONS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  OBSERVABILITY.md  ORCHESTRATION.md  PRE_COMMIT_CHECKLIST.md  README.md  RESTRUCTURE_SUMMARY.md  __init__.py  admin_endpoints.py  cognee_client.py  cognee_init.py  cognee_lazy_loader.py  cognee_query.py  cognee_schema.py  config.py  document_loader.py  embeddings.py  entity_validator.py  generator.py  intent_classifier.py  jira_parser.py  main.py  orchestrator.py  orchestrator_v2.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  response_models.py  retrieval.py  skaffold.yaml  streamlit_dashboard.py  (+2 more)
ai-insights/chroma_data/: chroma.sqlite3
ai-insights/ingestion/: __init__.py  governance_actions.py  product_snapshot.py
ai-insights/k8s/: ai-insights.yaml  kustomization.yaml  milvus.yaml  namespace.yaml  secrets.yaml
ai-insights/src/ai_insights/: README.md  __init__.py  admin_endpoints.py
ai-insights/src/ai_insights/cognee/: __init__.py  cognee_client.py  cognee_diagnostics.py  cognee_init.py  cognee_lazy_loader.py  cognee_query.py  cognee_schema.py
ai-insights/src/ai_insights/config/: __init__.py  config.py  logger.py  settings.py
ai-insights/src/ai_insights/evaluation/: __init__.py  evaluator.py  metrics.py
ai-insights/src/ai_insights/models/: __init__.py  cognee_schemas.py  response_models.py
ai-insights/src/ai_insights/observability/: __init__.py  tracing.py
ai-insights/src/ai_insights/orchestration/: __init__.py  entity_validator.py  feedback_loop.py  intent_classifier.py  orchestrator_v2.py
ai-insights/src/ai_insights/retrieval/: __init__.py  document_loader.py  embeddings.py  reranker.py  retrieval.py  vector_store.py
ai-insights/src/ai_insights/utils/: __init__.py  audit.py  (+7 more)
ai-insights/tests/: README.md  conftest.py  test_admin_endpoints.py  test_admin_endpoints_comprehensive.py  test_auth.py  test_cognee_client.py  test_cognee_diagnostic.py  test_cognee_lazy_loader.py  test_cognee_schemas.py  test_config.py  test_document_loader.py  test_document_upload.py  test_embeddings.py  test_entity_validator.py  test_evaluation.py  test_feedback_loop.py  test_generator.py  test_governance_actions.py  test_integration.py  test_intent_classifier.py  test_jira_parser.py  test_main_comprehensive.py  test_main_endpoints.py  test_metrics.py  test_observability.py  test_openapi.py  test_orchestrator.py  test_product_snapshot.py  test_rate_limit.py  test_reranker.py  test_response_models.py  test_retrieval.py  test_settings.py  test_streaming_endpoint.py  test_validation.py  test_vector_store.py
(+220 files in other folders)
